Add dotenv - Protect my secret data in .env file

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,3 +10,7 @@ production:
 test:
   <<: *default
   database: rails-mister-cocktail_test
+
+development:
+  <<: *default
+  database: rails-mister-cocktail_development
